<resources>
    <string name="app_name">WizClock</string>
    <string name="title_activity_main">WizClock</string>
    <string name="title_clock">Clock</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_timer">Timer</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="record">RECORD</string>
    <string name="reset">RESET</string>
    <string name="cancel">CANCEL</string>
    <string name="advanced_mode">Use Advanced Mode</string>
    <string name="current_time_is">Current Time is</string>
    <string name="unsupport">This function is not ready yet!</string>
    <string name="title_activity_advance_timer">Advanced Timer</string>
    <string name="announce">Announce(KOR)</string>
    <string name="feedback">Feedback</string>
    <string name="opensource">Open Source</string>
    <string name="insert">Insert</string>
    <string name="repeat">Repetitions</string>
    <string name="delete">Delete</string>
    <string name="fullStack">Only up to 10 can be inserted.</string>

    <string name="alarm_notification_title_template">Alarm: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="alarm_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
