<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clock">

    <fragment
        android:id="@+id/navigation_clock"
        android:name="com.jjickjjicks.wizclock.ui.function.ClockFragment"
        android:label="@string/title_clock"
        tools:layout="@layout/fragment_clock" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.jjickjjicks.wizclock.ui.function.AlarmFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.jjickjjicks.wizclock.ui.function.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_stopwatch"
        android:name="com.jjickjjicks.wizclock.ui.function.StopwatchFragment"
        android:label="@string/title_stopwatch"
        tools:layout="@layout/fragment_stopwatch" />
</navigation>